--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=StuManager
+
+spring.datasource.url=jdbc:mysql://localhost:3306/StuManager?setUnicode=true&characterEncoding=utf8&useAffectedRows=true
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
